--- a/Spring/Photostagram/src/main/resources/static/css/aside.css
+++ b/Spring/Photostagram/src/main/resources/static/css/aside.css
@@ -572,11 +572,13 @@ html {height: 100%;}
         width: 50px;
         height: 50px;
         float: left;
+        margin-right: 2px;
       }
 
       .alarmlist > div:nth-child(1) > a >  img{
         width: 50px;
         height: 50px;
+        border-radius: 50%;
       }
 
       .alarmlist > div:nth-child(2) {
@@ -587,6 +589,7 @@ html {height: 100%;}
 
       .alarmlist > div:nth-child(2) > a >  h3{
         font-size: 14px;
+        line-height: normal;
       }
 
       .alarmlist > div:nth-child(3){
@@ -599,6 +602,7 @@ html {height: 100%;}
         float: right;
         width: 48px;
         height: 48px;
+        margin-left: 11px;
       }
 
       .spinner {
@@ -1057,11 +1061,11 @@ div.modal-post div.wrapper div.post-content div.rest {
   display: block;
   width: 100%;
   height: 100%;
-  flex-direction: column;
+  overflow: hidden;
 }
 div.modal-post div.wrapper div.post-content div.rest div.text {
   width: 100%;
-  height: calc(96% - 100px);
+  height: calc(96% - 148px);
   box-sizing: border-box;
   overflow-y: scroll;
   padding: 5px 11px;
@@ -1521,6 +1525,8 @@ div.modal-post div.wrapper div.post-content div.rest div.comment-wrapper {
   margin-top: 8px;
   padding-left: 16px;
   padding-right: 49px;
+  float: left;
+  overflow: hidden;
 }
 div.modal-post
   div.wrapper
