--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -61,9 +61,6 @@
                       <!------------- 게시글 상단 날짜입니다 --------------------->
                       <span class="time articleTime"></span>
 
-<!--                      <th:block th:if="${not #strings.equals(user.no,article.user_no)}"><span class="jum">•</span>-->
-<!--                        <input type="button" class="idxfw idx_followBtn" value="팔로우" th:data-no="${article.user_no}"/>-->
-<!--                      </th:block>-->
                     </div>
                     <div class="country s_text">Busan, South Korea</div>
                   </div>
@@ -89,6 +86,7 @@
                              th:src="|@{/}thumb/${thumbImage.thumb}">
                       </video>
                     </th:block>
+
                     <th:block th:unless="${#strings.contains(thumbImage.thumb,'.mp4')}">
                       <img th:src="|@{/}thumb/${thumbImage.thumb}" alt="visual01" />
                     </th:block>
@@ -221,8 +219,6 @@
                         <a th:href="@{/profile(username=${article.memberVO.username})}" th:text="${article.memberVO.username}"></a>
                       </th:block>
 
-                      <span>&nbsp;ㆍ</span>&nbsp;
-                      <button class="follow">팔로우</button>&nbsp;
                     </div>
                     <!-- modal 게시글 내용 -->
                     <div class="user-content">
@@ -329,7 +325,7 @@
                         <input type="hidden" name="postNo" th:value="${article.no}">
                         <input type="hidden" name="userNo" th:value="${user.no}">
                         <input type="text" class="commentText" placeholder="댓글 달기...">
-                        <button class="modal_upload_btn m_text">게시</button>
+                        <button class="upload_btn m_text">게시</button>
                       </div>
                     </div>
 
