--- a/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/memberLayout.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/css/member.css}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <!-- 조광호 / facebook login test -->
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v10.0&appId=551257260431667" nonce="SiOBIhLG"></script>
 </head>
 <body>
   <main>
