--- a/Spring/Photostagram/src/main/resources/templates/board/post.html
+++ b/Spring/Photostagram/src/main/resources/templates/board/post.html
@@ -18,7 +18,7 @@
                 let noticesTime = [[${noticesTime}]];
 
                 let h = 0;
-                noticesTime.forEach(function(noticesTime, index){
+                noticesTime.forEach(function(noticesTime, post){
                     let rdate = noticesTime.rdate;
                     console.log("rdate : "+rdate);
                     rdate = rdate.split(" ");
@@ -85,7 +85,7 @@
             <section class="contents">
                 <nav>
                     <div id="profile">
-                        <img th:src="@{/img/44884218_345707102882519_2446069589734326272_n.jpg}"  alt="profile">
+                        <img th:src="|@{/}thumb/${postImg.profileImg}"  alt="profile">
                         <p class="postTop">
                             <span id="nick">[[${user.username}]]</span>
                             ·
@@ -118,8 +118,7 @@
                                 </th:block>
                                 */-->
                                 <div class="comment-time">
-                                    좋아요 <span>[[${commentVo.like_count}]]</span>개 &nbsp;&nbsp;
-                                    <a href="#">답글달기</a>
+                                    <span class="favorite" th:if="${commentVo.like_count > 0}">좋아요 <span>[[${commentVo.like_count}]]</span>개</span>&nbsp;&nbsp;<a href="#">답글달기</a>
                                 </div>
                             </div>
 
@@ -218,7 +217,7 @@
                         <a href="#" id="bookMark" class="remove"></a>
                     </div>
                     <div>
-                        <div>좋아요 <span>[[${content_like_time.like}]]</span>개</div>
+                        <div class="favorite2" th:if="${content_like_time.like >0}">좋아요 <span>[[${content_like_time.like}]]</span>개</div>
                         <div class="date" th:text="${#strings.substring(content_like_time.rdate, 5, 10)}">2월 28일</div>
                     </div>
                     <div>
