--- a/Spring/Photostagram/src/main/resources/templates/chat/content.html
+++ b/Spring/Photostagram/src/main/resources/templates/chat/content.html
@@ -111,6 +111,12 @@
                 msg.value = '';
             }
         });
+
+        $('.chat-head-add-2').on('click', function(){
+            let modal = $('#ChatDelete');
+
+            modal.show();
+        });
     });
     </script>
     <div class="fullscreen">
