--- a/Spring/Photostagram/src/main/resources/templates/chat/content.html
+++ b/Spring/Photostagram/src/main/resources/templates/chat/content.html
@@ -116,7 +116,7 @@
             $('.deleteOrOutChat').toggleClass('on');
         });
 
-        $('.getOutChat').on('click', function(){
+        $('.deleteChat').on('click', function(){
             let isOutChat = confirm('채팅을 삭제하시겠어요?');
             if(isOutChat){
                 let room_no = $('input[name=roomNow_no]').val();
@@ -125,7 +125,7 @@
                 let jsonData = {"room_no":room_no, "user_no":user_no};
 
                 $.ajax({
-                    url:'/Photostagram/outChat',
+                    url:'/Photostagram/deleteChat',
                     method:'POST',
                     data:jsonData,
                     dataType:'json',
@@ -228,17 +228,9 @@
                                 <img th:src="@{/img/free-icon-info-5258991.png}" alt="상세정보">
                             </div>
                         </div>
-                        <div class="deleteOrOutChat" th:if="${#lists.size(roomNow) > 2}">
-                            <div class="getOutChat">
+                        <div class="deleteOrOutChat">
+                            <div class="deleteChat">
                                 <button>채팅나가기</button>
-                            </div>
-                            <div class="deleteChat">
-                                <button>채팅삭제</button>
-                            </div>
-                        </div>
-                        <div class="deleteOrOutChat" th:unless="${#lists.size(roomNow) > 2}">
-                            <div class="deleteChat">
-                                <button>채팅삭제</button>
                             </div>
                         </div>
                     </div>
