--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -228,7 +228,7 @@
     cursor: pointer;
   }
 
-  .fList {width: 100%; height:374px; padding: 10px; overflow-y: scroll;}
+  .fList {width: 100%; height: 370px; padding: 10px; overflow-y: scroll;}
 
   .peopleFollow > div {
     width: 100%;
@@ -238,6 +238,9 @@
     border-bottom: 1px solid #e9e9e9;
     font-weight: bold;
   }
+  .peopleFollow > div > div {width: 50%; float: left; text-align: center; line-height: 40px; font-weight: bold;}
+  .peopleFollow > div > div:nth-child(1) {border-right: 1px solid #e9e9e9;}
+  .peopleFollow > div > div:hover {cursor: pointer;}
   .fList > li {
     width: 350px;
     height: 50px;
