--- a/Spring/Photostagram/src/main/resources/static/css/profileModify.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profileModify.css
@@ -41,8 +41,18 @@
     #pro > section > .myProfile > .proPhoto > div {width: 150px; height: 150px; border-radius: 70%; overflow: hidden;}
     #pro > section > .myProfile > .proPhoto > div > img {width: 100%; height: 100%; object-fit: cover;}
     ***/
-    #myInfo > div > div:nth-child(1) {float: left; width: 45px; height:45px; border-radius: 70%; overflow:hidden;}
-    #myInfo > div > div > img {width: 100%; height: 100%; object-fit: cover;}
+    #myInfo > div > div:nth-child(1) {
+        float: left;
+        width: 45px;
+        height:45px;
+        border-radius: 70%;
+        overflow:hidden;
+    }
+    #myInfo > div > div > img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
     #myInfo > div > div {margin-left: 20px; margin-top:5px; float: left; width: 150px; position: relative;}
     #myInfo > div > div > span {float: left; font-size: 18px;}
     #myInfo > div > div > a {float: left; color: #32a4ff; font-weight: bold; font-size: 15px;}
