--- a/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
+++ b/Spring/Photostagram/src/main/resources/templates/layout/profileLayout.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Photostagram</title>
     <link rel="shortcut icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
